# wordhooks-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: cd.yaml
.sqlx/: query-081d317ffa25f18b304fb0c544fe6672dc0af51f21ff62918b2465cabe186291.json  query-0945c2af44f7f2a823ed54bc3976533ae60292ede19b8dd774614290873e6954.json  query-0d8f3bbeb072023fd3e2c72d81a9a8bbbb83f7126b1340e1d3a920397171b557.json  query-21b038c0ad12a36c2e94a382de9c14449b793098dcc37437fb9f64538904ad01.json  query-45165a352e817a560ec25f2227f44ebca3e206874b096700a826ef83abe6aa40.json  query-4a66096199ec4585831c1a4437a17da823dfffd54ff47d8691bc0fd5da04ce9c.json  query-4b5af15b533e70964ca14b6e932e38ad7bf91deb0a9ae3c8d3c45073ee7201d7.json  query-4cc2145a615d6c10b3c6b15b532e869e05c453fe8d1465ce6563bcfd4c1122cd.json  query-5122e0698197b590acd73c14f33276bbcb9198d0fbf11fab34c1d4b0a3f33a54.json  query-6d45da7f25eb15d9e78495c30853b2c8a551a20a81839af45aadac2b9a410d40.json  query-a27a56415c87c26a9f23552d9bd9757ae9feca8b64044e11bc9f4353523b842d.json  query-b5ce0455b988725b30ddbefddd3a9de860a02acc4e10746580b56a94acdbba0a.json  query-c6b1005f742dab90f7b881f85bc2a60eea59e83bcc8affff485b23dc8f0cd123.json  query-d5221197bd600777a1757ddf7788fef004ebfa207e41d6c73c2edbe038a1cd43.json  query-fa6a2af399cdc333993a91b95cb343bb161bc5110a6fd3e6db0f888f5c83921b.json  query-fd2f6c9ed5ab9fb19ec4b1f4cafa7d928b6e724d1b3f6a66fd761b76d0d566f3.json
sql/: init.sql
src/: commands.rs  main.rs
src/commands/: channels.rs  hooks.rs  misc.rs  mod.rs  user.rs
translations/: en-US.ftl
