[package]
name = "wordhooks-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
poise = { version = "0.6.1", features = ["cache"] }
tokio = { version = "1.40.0", features = ["rt", "rt-multi-thread", "macros"] }
tracing = "0.1.40"
dotenv_codegen = "0.15.0"
dotenv = "0.15.0"
sqlx = { version = "0.8.2", features = ["sqlite", "runtime-tokio"] }